sw/qa/extras/ooxmlexport/ooxmlexport9.cxx
@@ -1049,6 +1049,28 @@ DECLARE_OOXMLEXPORT_TEST(tdf112169, "tdf112169.odt")
     // LO crashed while export because of character background color handling
 }
 
+DECLARE_OOXMLEXPORT_TEST(testTdf103090, "tdf103090.odt")
+{
+    xmlDocPtr pXmlDoc = parseExport("word/document.xml");
+    if (!pXmlDoc)
+        return;
+
+    // Get bookmark name
+    OUString bookmarkName = getXPath(pXmlDoc, "/w:document/w:body/w:p/w:bookmarkStart", "name");
+
+    // Ensure that name has no spaces
+    CPPUNIT_ASSERT(bookmarkName.indexOf(" ") < 0);
+
+    // Get PAGEREF field
+    OUString fieldName = getXPathContent(pXmlDoc, "/w:document/w:body/w:p/w:r[2]/w:instrText");
+
+    // Ensure that PAGEREF field refers exactly our bookmark
+    OUString expectedFieldName(" PAGEREF ");
+    expectedFieldName += bookmarkName;
+    expectedFieldName += " \\h ";
+    CPPUNIT_ASSERT_EQUAL(expectedFieldName, fieldName);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
